--- a/random-squares.html
+++ b/random-squares.html
@@ -8,7 +8,7 @@
 <!--[if !(IE 7) & !(IE 8)]><!-->
 <html lang="en-US">
 <!--<![endif]-->
-<head><?php @include('/var/www/dns.php');?>
+<head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
